--- a/Project/package.json
+++ b/Project/package.json
@@ -17,8 +17,9 @@
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "mysql2": "^2.3.3",
-    "prettier": "^2.4.1"
+    "prettier": "2.5.1"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -28,7 +29,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "lint-staged"
     }
   },
   "lint-staged": {
