--- a/Project/package.json
+++ b/Project/package.json
@@ -30,8 +30,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "lint-staged"
+      "pre-commit": "npm run lint:fix"
     }
   },
   "lint-staged": {
