--- a/Project/.eslintrc
+++ b/Project/.eslintrc
@@ -7,6 +7,9 @@
   "extends": [
     "airbnb/base"
   ],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
     "quotes": "off",
     "camelcase": "off",
